.archive/media/kyoo/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kyoo
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: media
spec:
  hostnames:
    - kyoo.vzkn.eu
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: kyoo-traefik
          namespace: media
          port: 80
